# SimpleWebAppDemo

./: Makefile  README.md  docker-compose-local.yml  pyproject.toml  template.yaml
SWADemo/: config.py  database.py  main.py
SWADemo/api/: api.py  auth.py
SWADemo/api/endpoints/: authorization.py  files.py
SWADemo/crud/: base.py  file.py  user.py
SWADemo/integrations/: S3Handler.py
SWADemo/models/: S3File.py  auth.py  base.py  file.py  user.py
SWADemo/models/enums/: events.py
